# hw_m10

./: README.md  pyproject.toml
quotes/: docker-compose.yml  requirements.txt
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_fullname.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: add_author.html  add_quote.html  author.html  base.html  index.html  quotes_by_tag.html
quotes/quotesapp/templatetags/: extract_tags.py
quotes/users/: forms.py  views.py
quotes/users/templates/users/: login.html  signup.html
quotes/utils/: migration.py  my_test.py
