[tool.poetry]
name = "hw-m10"
version = "0.1.0"
description = ""
authors = ["Makss2022 <maximkhersonua@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_m10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2 = "^2.9.6"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
